# MAPF-GPT-DDG

./: LICENSE  README.md  benchmark.py  collect_data.py  create_env.py  dagger.py  example.py  generate_dataset.py  macro_env.py  main.py  million_agents_run.py  pyproject.toml  run.yaml  train.py  worker.py
ckpt_configs/01-random/: 01-random.yaml
ckpt_configs/02-mazes/: 02-mazes.yaml
dataset_generator/: generate_dataset.py  gt_data_collectoy.py  instance_generator.py  validate_gt_data.py
docker/: requirements.txt
eval_configs/01-random/: 01-random.yaml
eval_configs/02-mazes/: 02-mazes.yaml
finetuning/: data_aggregation_generator.py  delta_data_generator.py  filter_data.py  scenario_generators.py
gpt/: aggregated_data_loader.py  config-2M-DDG.py  config-2M-Directions.py  cs_pibt.py  ddm.py  dmm.py  dmm_3M.py  dmm_comm.py  dmm_gnn.py  fast_data_loader.py  inference.py  model.py  observation_generator.cpp  observation_generator.h  observation_generator_directions.cpp  observation_generator_directions.h
lacam/: CMakeLists.txt  inference.py
lacam0/: inference.py  lacam_py.cpp
lacam0/include/: graph.hpp  instance.hpp  lacam.hpp  planner.hpp  utils.hpp
lacam0/src/: graph.cpp  instance.cpp  lacam.cpp  planner.cpp  utils.cpp
lagat_configs/01-sparse-warehouse/: 01-sparse-warehouse.yaml  maps.yaml
lagat_configs/02-dense-warehouse/: 02-dense-warehouse.yaml  maps.yaml
lagat_configs/03-empty-room/: 03-empty-room.yaml  maps.yaml
lagat_configs/04-dense-room/: 04-dense-room.yaml  maps.yaml
utils/: data_collection.py  data_utils.py  download_dataset.py  multi_animation_runner.py  svg_utils.py  wrappers.py
(+4 files in other folders)
