[project]
name = "dmm"
version = "0.1.0"
description = "Decentralized Master-Mind"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.5,<=1.26.4",
    "torch==2.5.1",
    "pydantic>=1.8.2,<=1.9.1",
    "pytest>=6.2.5,<=7.1.2",
    "pandas",
    "tensorboard>=1.15.0",
    "tensorboardx>=2.0",
    "psutil>=5.7.0",
    "threadpoolctl>=2.0.0",
    "colorlog",
    "pybind11==2.13.1",
    "cppimport>=22.8.2",
    "matplotlib",
    "seaborn",
    "tabulate>=0.8.7,<=0.8.10",
    "protobuf==3.20.3",
    "typing-extensions==4.8.0",
    "importlib-metadata==4.13.0",
    "dask[distributed]",
    "loguru",
    "pogema-toolbox==0.1.1",
    "pogema==1.3.2a4",
    "pyarrow",
    "huggingface_hub",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Explicitly disable setuptools auto-discovery (in case setuptools is invoked)
[tool.setuptools]
packages = []

# Hatchling configuration
[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.uv]
dev-dependencies = []